feat:新增了消息中心页面

--- a/webapp/html/myactivity.html
+++ b/webapp/html/myactivity.html
@@ -150,7 +150,7 @@
                          <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link" href="information.html" aria-expanded="false">
                                 <i class="mdi mdi-information-outline"></i>
-                                <span class="hide-menu">志愿者消息</span>
+                                <span class="hide-menu">消息中心</span>
                             </a>
 
                     </ul>
