--- a/webapp/html/createactivity.html
+++ b/webapp/html/createactivity.html
@@ -117,7 +117,7 @@
                             <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="myactivity/img/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated">
                                 <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i> 设置</a>
-                                <a class="dropdown-item" href="https://www.google.com/"><i class="ti-email m-r-5 m-l-5"></i> 退出</a>
+                                <a class="dropdown-item" href="https://www.google.com/"><i class="ti-close m-r-5 m-l-5"></i> 退出</a>
                             </div>
                         </li>
                         <!-- ============================================================== -->
