feat：新增了查看志愿者信息的模块，新增了主页

--- a/webapp/html/myactivity.html
+++ b/webapp/html/myactivity.html
@@ -51,7 +51,7 @@
                     <!-- Logo -->
                     <!-- ============================================================== -->
                     <div class="navbar-brand">
-                        <a href="index.html" class="logo">
+                        <a href="main.html" class="logo">
                             <!-- Logo icon -->
                             <b class="logo-icon">
                                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
@@ -116,8 +116,8 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img
                                     src="myactivity/img/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated">
-                                <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i>
-                                    设置</a>
+                                <a class="dropdown-item" href="main.html"><i class="ti-user m-r-5 m-l-5"></i>
+                                    主页</a>
                                 <a class="dropdown-item" href="https://www.google.com/"><i
                                         class="ti-close m-r-5 m-l-5"></i> 退出</a>
                             </div>
@@ -188,7 +188,7 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item">
-                                        <a href="#">主页</a>
+                                        <a href="main.html">主页</a>
                                     </li>
                                     <li class="breadcrumb-item active" aria-current="page">我的项目</li>
                                 </ol>
@@ -238,7 +238,7 @@
                                             <h5 class="card-title">校园志愿讲解</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">项目编号：XSWL12345</h6>
                                             <div class="row">
-                                                <div class="col-sm-6">
+                                                <div class="col-sm-5">
                                                     <div class="card">
                                                         <img src="myactivity/img/thu2.jpeg" class="card-img-top"
                                                             alt="...">
@@ -256,29 +256,40 @@
                                                             disabled>申请结项</button>
                                                     </div>
                                                 </div>
-                                                <div class="col-sm-6">
-                                                    <ul class="list-group list-group-flush">
-                                                        <li class="list-group-item">状态：待审核 <a href="#"
-                                                                class="btn btn-success" style="float:right">修改</a></li>
-                                                        <li class="list-group-item">招募时间：2019.11.23-2019.11.23<a
-                                                                href="#" class="btn btn-success"
-                                                                style="float:right">修改</a></li>
-                                                        <li class="list-group-item">活动时间：2019.11.23-2019.11.23<a
-                                                                href="#" class="btn btn-success"
-                                                                style="float:right">修改</a></li>
-                                                        <li class="list-group-item">活动类别：公益 <a href="#"
-                                                                class="btn btn-success" style="float:right">修改</a></li>
-                                                        <li class="list-group-item">负责单位：校团委志愿组 <a href="#"
-                                                                class="btn btn-success" style="float:right">修改</a></li>
-                                                        <li class="list-group-item">负责人：董明珠<a href="#"
-                                                                class="btn btn-success" style="float:right">修改</a></li>
-                                                        <li class="list-group-item">联系电话：18842438984<a href="#"
-                                                                class="btn btn-success" style="float:right">修改</a></li>
-                                                        <li class="list-group-item">邮箱：3213213213@qq.com <a href="#"
-                                                                class="btn btn-success" style="float:right">修改</a></li>
-                                                        <li class="list-group-item"><a href="#" class="btn btn-danger"
-                                                                style="float:right">删除项目</a></li>li>
-                                                    </ul>
+                                                <div class="col-sm-7">
+                                                    <div class="card">
+                                                        <div class="card-body">
+                                                            <ul class="list-group list-group-flush">
+                                                                <li class="list-group-item">状态：待审核 <a href="#"
+                                                                        class="btn btn-success"
+                                                                        style="float:right">修改</a></li>
+                                                                <li class="list-group-item">招募时间：2019.11.23-2019.11.23<a
+                                                                        href="#" class="btn btn-success"
+                                                                        style="float:right">修改</a></li>
+                                                                <li class="list-group-item">活动时间：2019.11.23-2019.11.23<a
+                                                                        href="#" class="btn btn-success"
+                                                                        style="float:right">修改</a></li>
+                                                                <li class="list-group-item">活动类别：公益 <a href="#"
+                                                                        class="btn btn-success"
+                                                                        style="float:right">修改</a></li>
+                                                                <li class="list-group-item">负责单位：校团委志愿组 <a href="#"
+                                                                        class="btn btn-success"
+                                                                        style="float:right">修改</a></li>
+                                                                <li class="list-group-item">负责人：董明珠<a href="#"
+                                                                        class="btn btn-success"
+                                                                        style="float:right">修改</a></li>
+                                                                <li class="list-group-item">联系电话：18842438984<a href="#"
+                                                                        class="btn btn-success"
+                                                                        style="float:right">修改</a></li>
+                                                                <li class="list-group-item">邮箱：3213213213@qq.com <a
+                                                                        href="#" class="btn btn-success"
+                                                                        style="float:right">修改</a></li>
+                                                                <li class="list-group-item"><a href="#"
+                                                                        class="btn btn-danger"
+                                                                        style="float:right">删除项目</a></li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -304,7 +315,7 @@
                                                     </thead>
                                                     <tbody>
                                                         <tr class="table-success" style="cursor:pointer;"
-                                                            onclick="$('#').modal('toggle')">
+                                                            onclick="$('#personModal').modal('toggle')">
                                                             <th scope="row">王俊凯</th>
                                                             <td>2017323283</td>
                                                             <td>经管学院</td>
@@ -312,14 +323,15 @@
                                                             <td>2019.11.20</td>
                                                         </tr>
                                                         <tr class="table-success" style="cursor:pointer;"
-                                                            onclick="$('#').modal('toggle')">
+                                                            onclick="$('#personModal').modal('toggle')">
                                                             <th scope="row">王源</th>
                                                             <td>2017523283</td>
                                                             <td>辆载学院</td>
                                                             <td>流动志愿者</td>
                                                             <td>2019.11.20</td>
                                                         </tr>
-                                                        <tr style="cursor:pointer;" onclick="$('#').modal('toggle')">
+                                                        <tr style="cursor:pointer;"
+                                                            onclick="$('#personModal').modal('toggle')">
                                                             <th scope="row">马云</th>
                                                             <td>2017326673</td>
                                                             <td>土木系</td>
@@ -386,6 +398,27 @@
                                                             <td>已读</td>
                                                             <td>回复</td>
                                                         </tr>
+                                                        <tr style="cursor:pointer;"
+                                                            onclick="$('#messageModal').modal('toggle')">
+                                                            <th scope="row">志愿申请</th>
+                                                            <td>志愿者</td>
+                                                            <td>马克思</td>
+                                                            <td>校园志愿讲解</td>
+                                                            <td>2019.11.20 22:36</td>
+                                                            <td>已读</td>
+                                                            <td>回复</td>
+                                                        </tr>
+                                                        <tr style="cursor:pointer;"
+                                                            onclick="$('#messageModal').modal('toggle')">
+                                                            <th scope="row">志愿申请</th>
+                                                            <td>志愿者</td>
+                                                            <td>马克思</td>
+                                                            <td>校园志愿讲解</td>
+                                                            <td>2019.11.20 22:36</td>
+                                                            <td>已读</td>
+                                                            <td>回复</td>
+                                                        </tr>
+
 
                                                     </tbody>
                                                 </table>
@@ -410,7 +443,7 @@
             <!-- Modal message-->
             <div class="modal fade" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="messageModalLabel"
                 aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="messageModalLabel">消息详情</h5>
@@ -464,6 +497,68 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Modal person-->
+            <div class="modal fade" id="personModal" tabindex="-1" role="dialog" aria-labelledby="personModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="personModalLabel">项目详情</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+
+                        <div class="modal-body">
+
+                            <div class="card" style="width: 45rem;">
+                                <div class="card-body">
+                                    <h5 class="card-title">王俊凯</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">2017123423</h6>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <div class="card">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">个人简介</h5>
+                                                    <p class="card-text" rows="10">这个人很懒，什么也没说。
+                                                    </p>
+                                                </div>
+                                                <button class="btn btn-lg btn-info btn-block">发送消息</button>
+                                                <button class="btn btn-lg btn-primary btn-block">更改职位</button>
+                                                <button class="btn btn-lg btn-secondary btn-block" disabled>招募邀请</button>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="card">
+                                                <div class="card-body">
+                                                    <ul class="list-group list-group-flush">
+                                                        <li class="list-group-item">院系：软件学院 </li>
+                                                        <li class="list-group-item">微信号：18811382555</li>
+                                                        <li class="list-group-item">邮箱：345323232@qq.com</li>
+                                                        <li class="list-group-item">联系电话：18811382555 </li>
+                                                        <li class="list-group-item">加入项目：校园志愿讲解（XSWL12345）</li>
+                                                        <li class="list-group-item">工作职位：流动志愿者</li>
+                                                        <li class="list-group-item">工作时间：2019.11.22</li>
+                                                        <li class="list-group-item"><a href="#" class="btn btn-danger"
+                                                                style="float:right">删除成员</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+                            <button type="button" class="btn btn-primary">确认</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Container fluid  -->
             <!-- ============================================================== -->
             <div class="container-fluid">
